--- a/msp-templates/ara_msp_manifest.xml.tmpl
+++ b/msp-templates/ara_msp_manifest.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ara-msp-manifest xmlns:msp="http://schemas.android.com/apk/res/com.google.ara.$name">
+<ara-msp-manifest xmlns:msp="http://schemas.android.com/apk/res/$package">
     <detailed-info
 	    msp:vid="$vid"
 	    msp:pid="$pid"
@@ -12,8 +12,8 @@
     <power-profile msp:name="power-profile" />
     <signature msp:sigFileName="signature.sig" />
     <certifications
-	    msp:sar="false"
-	    msp:fcc="true"
-        msp:ce="false"
+	    msp:sar="$cert_sar"
+	    msp:fcc="$cert_fcc"
+        msp:ce="$cert_ce"
 	/>
 </ara-msp-manifest>
